// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoList /> should render a <TodoList /> component with a finished todo (Jest snapshot ver.) 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2 todo-list"
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 list-component"
  >
    <li
      className="MuiListItem-container-33"
    >
      <div
        className="MuiButtonBase-root-42 MuiListItem-root-32 MuiListItem-dense-36 MuiListItem-gutters-39 MuiListItem-button-40 MuiListItem-secondaryAction-41"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButtonBase-root-42 MuiIconButton-root-54 MuiSwitchBase-root-49 MuiSwitchBase-default-51 MuiCheckbox-default-44 MuiSwitchBase-checked-52 MuiCheckbox-checked-45 MuiCheckbox-checkedSecondary-47"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role={undefined}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-59"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-60"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
            <input
              checked={true}
              className="MuiSwitchBase-input-50"
              disabled={undefined}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              tabIndex={undefined}
              type="checkbox"
              value={undefined}
            />
          </span>
          <span
            className="MuiTouchRipple-root-66"
          />
        </span>
        <div
          className="MuiListItemText-root-73 MuiListItemText-dense-75 todo-done"
        >
          <h3
            className="MuiTypography-root-79 MuiTypography-subheading-86 MuiListItemText-primary-76 MuiListItemText-textDense-78"
          >
            my todo
          </h3>
        </div>
        <span
          className="MuiTouchRipple-root-66"
        />
      </div>
      <div
        className="MuiListItemSecondaryAction-root-103"
      >
        <button
          className="MuiButtonBase-root-42 MuiIconButton-root-54"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-59"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-60"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-66"
          />
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`<TodoList /> should render a <TodoList /> component with an unfinished todo (Jest snapshot ver.) 1`] = `
<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2 todo-list"
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 list-component"
  >
    <li
      className="MuiListItem-container-33"
    >
      <div
        className="MuiButtonBase-root-42 MuiListItem-root-32 MuiListItem-dense-36 MuiListItem-gutters-39 MuiListItem-button-40 MuiListItem-secondaryAction-41"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButtonBase-root-42 MuiIconButton-root-54 MuiSwitchBase-root-49 MuiSwitchBase-default-51 MuiCheckbox-default-44"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role={undefined}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-59"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-60"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <input
              checked={false}
              className="MuiSwitchBase-input-50"
              disabled={undefined}
              id={undefined}
              name={undefined}
              onChange={[Function]}
              tabIndex={undefined}
              type="checkbox"
              value={undefined}
            />
          </span>
          <span
            className="MuiTouchRipple-root-66"
          />
        </span>
        <div
          className="MuiListItemText-root-73 MuiListItemText-dense-75"
        >
          <h3
            className="MuiTypography-root-79 MuiTypography-subheading-86 MuiListItemText-primary-76 MuiListItemText-textDense-78"
          >
            my todo
          </h3>
        </div>
        <span
          className="MuiTouchRipple-root-66"
        />
      </div>
      <div
        className="MuiListItemSecondaryAction-root-103"
      >
        <button
          className="MuiButtonBase-root-42 MuiIconButton-root-54"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-59"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-60"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-66"
          />
        </button>
      </div>
    </li>
  </ul>
</div>
`;
